# GildedRose-Refactoring-Kata

Java/: README.md
TypeScript/: README.md
c99/: CMakeLists.txt  README.md  run-once-cmake.sh
cpp/: README.md  run-googletest-unit-cov.sh
csharpcore/: README.md
csharpcore/GildedRoseTests/: GildedRoseTests.csproj
js-jest/: README.md
python-pytest/: .gitignore
